# prom-instrumentation

./: .dockerignore  .gitignore  Dockerfile  Makefile  notes.txt  pyproject.toml  requirements.txt
app/: __init__.py
app/health/: __init__.py  routes.py
app/main/: routes.py
app/metrics/: __init__.py  routes.py
app/templates/main/: base.html
tests/: test_health_routes.py
