[project]
name = "prom-instrumentation"
version = "0.1.0"
description = ""
authors = [
    {name = "aexpedito",email = "aexpedito@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (==3.1.0)",
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "anyio (==4.9.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.2)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "gunicorn (==23.0.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.8)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jeepney (==0.9.0)",
    "jinja2 (==3.1.6)",
    "keyring (==25.6.0)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "packaging (==24.2)",
    "pbs-installer (==2025.4.9)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "poetry (==2.1.2)",
    "poetry-core (==2.1.2)",
    "prometheus-client (==0.21.1)",
    "pycparser (==2.22)",
    "pyproject-hooks (==1.2.0)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "secretstorage (==3.3.3)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.4.11.15)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.30.0)",
    "werkzeug (==3.1.3)",
    "zstandard (==0.23.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flask = "3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
